--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@supabase/supabase-js": "^2.44.2",
     "docx": "^8.5.0",
     "draft-js": "^0.11.7",
     "file-saver": "^2.0.5",
