--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auto-docu",
+  "name": "auth-docu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.4",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@supabase/supabase-js": "^2.44.2",
+    "docx": "^8.5.0",
+    "draft-js": "^0.11.7",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "mammoth": "^1.8.0",
+    "next": "14.2.3",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-draggable": "^4.4.6",
+    "react-dropzone": "^14.2.3",
+    "react-resizable": "^3.0.5",
+    "react-signature-canvas": "^1.0.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/draft-js": "^0.11.18",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.7",
+    "@types/react-signature-canvas": "^1.0.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
